Not to mention it can make half a Divine Protection.
Lowering the Temp HP should help.

Improv -> 4(3) Notes required
Improv is relatively useless. This is my first try at increasing its viability -
if this fails, I'd be interested in seeing if a wildnote-related card would be alright.
Even if it was just "Queue 1(2) [wildnote]." Maybe it could even have no text.
After some gameplay, I'm pretty sold on this. It feels strong, but good.
it could maybe get Exhaust. And it might be a little too similar to Rhapsody, honestly...

Life Drain -> 10 damage, Exhaust(Exhaustive 2)
Life Drain is still super strong.
The Inspiration deck already increases Block, and capitalizing on that
with actual block cards should be the way to generate
most of the defense.
It's also just a generally pretty strong card, honestly.
Making it Exhaust means a heavily Inspiration focused deck may want to
wait, or use actual Inspiration Melodies, to buff up the card with good timing.
Exhaustive 2 is a nice upgrade now.

Off-Key -> 7(9) effects
Off-Key- was never worth taking, whereas if you had a camp ahead it was a key pick.
This should make the base effect a little better even with Riposte existing,
as well as nerfing the upgrade's huge swing.

Power Word: Stun -> Exhaustive 2
Same effects,
no more than 2 stuns.

Quick Song -> 0 cost base, 5(8) Block.
Bard didn't have any 0 cost block cards, and I thought that was by design
until I realized this UPGRADES 0 cost.
I like the idea of the card, and being 0 cost base
would make it a lot pickable unupgraded. So I made it 0 base,
and upgrades to add the 3 block.

Tiny Hut -> 6 Block base
Just to make it a little easier to take.

Divine Protection -> 7 Temp. HP.
Just to sliiiightly lower it.

Feast on Fear -> 5(7) Block.
Swaps Block amounts with Tiny Hut.
Reasoning: This has its own built in Vuln melody (and generally better notes),
whereas Tiny Hut doesn't have any built-ins.
Not to mention, just a general effort to slightly lower the TEMP HP numbers.