@@ -9,7 +9,7 @@
   },
   "bard:DivineProtection": {
     "NAME": "Божественный щит",
-    "DESCRIPTION": "Даёт 8 Временных_ОЗ."
+    "DESCRIPTION": "Даёт 7 Временных_ОЗ."
   },
   "bard:Draw": {
     "NAME": "Добор",
