@@ -78,3 +78,6 @@ Swaps Block amounts with Tiny Hut.
 Reasoning: This has its own built in Vuln melody (and generally better notes),
 whereas Tiny Hut doesn't have any built-ins.
 Not to mention, just a general effort to slightly lower the TEMP HP numbers.
+
+Shifting+ -> 15 on each effect
+The upgrade is a huge swing, and generally I find this card doesn't scale as crazily unless you get the upgrade. This is a tiny tune but it probably means a little bit.
